--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "peerDependencies": {
     "leaflet": "^1.0.2",
     "react-leaflet": "^1.0.1",
-    "react": "^15.4.1"
+    "react": "^16.3.1",
+    "prop-types": "^15.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
